# trains-rocket

./: Cargo.toml
src/: main.rs  train_announcement.rs  types.rs
templates/: error.html.hbs  index.html.hbs  trains.html.hbs
