[package]
name = "trains-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
chrono = "0.4.34"
